--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -2,4 +2,8 @@
     display: flex;
     flex-direction: column;
     border: 7px groove rgb(216, 119, 8);
+    position: absolute;
+    width: 50%;
+    margin: 1rem;
+    padding: .5rem;
 }
