--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -3,16 +3,33 @@
     flex-direction: column;
     border: 7px groove rgb(216, 119, 8);
     position: absolute;
-    width: 50%;
-    margin: 1rem;
+    max-width: 100vw;
+    max-height: 100vh;
     padding: .5rem;
     background-color: cadetblue;
+    border-radius: 1%;
 }
 .myPictures {
     display: flex;
     flex-direction: row;
-    border: 7px solid black;
+    width: 75%;
+    padding: .5rem;
 }
 .myPictures img {
-    width: 75% ;
+    width: 50rem ;
+   
+    border-radius: 7%;
 }
+p {
+    display: flex;
+    width: 60%;
+}
+@media screen and (max-width: 390px) {
+    .mainContainer {
+        width: 90%;
+    }
+.myPictures img{
+    width: 70%;
+}
+}
+    
