--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -6,7 +6,7 @@
     max-width: 100vw;
     max-height: 100vh;
     padding: .5rem;
-    background-image: linear-gradient( blueviolet 2%, rgb(87, 184, 87) );
+    background-image: linear-gradient( blueviolet 2%, rgb(41, 24, 112) );
     border-radius: 1%;
 }
 .myPictures {
@@ -17,7 +17,7 @@
 }
 .myPictures img {
     width: 50rem ;
-   
+   border: solid black;
     border-radius: 7%;
 }
 p {
@@ -30,7 +30,7 @@ p {
         height: 90%;
     }
 .myPictures img{
-    width: 70%;
+    width: 50%;
 }
 }
     
