--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     /* border: 7px groove rgb(216, 119, 8); */
-    position: absolute;
+    position: inherit;
     max-width: 100vw;
     max-height: 100vh;
     padding: .5rem;
