--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -21,7 +21,7 @@
     width: 50rem ;
    border: double 8px rgb(48, 46, 46);
     border-radius: 7%;
-    left: 100px;
+    left: 400px;
 }
 .bioText{
     font-family: 'Amatic SC', cursive;
@@ -53,6 +53,18 @@ h1{
     flex-direction: column;
 position: relative;
 left: 100px;
+}
+.additionalInfo{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    right: 60rem;
+    top: 10rem;
+    height: 20rem;
+    width:30rem;
+    font-family: 'Amatic SC', cursive;
+    font-size: 36px;
+
 }
 @media screen and (max-width: 390px) {
     .mainContainer {
