--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -74,6 +74,9 @@ left: 100px;
     width: 20rem;
     left: 20rem;
     top: 25rem;
+    font-family: 'Amatic SC', cursive;
+    font-size: 29px;
+
 }
 @media screen and (max-width: 390px) {
     .mainContainer {
