--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -29,10 +29,16 @@
     font-weight: bolder;
     display: flex;
     width: 60%;
+    color: #2e2e2e;
+   position: relative;
+   left: 30rem;
+
 }
 .pictureBtn {
  position: relative;
  display: flex;
+ top: 25rem;
+ right: 20rem;
  border: 2px inset black;
  background-color: rgba(61, 36, 3, 0.39);
  height: fit-content;
@@ -43,10 +49,13 @@
 font-weight: bolder;
  border-radius: 4%;
  font-family: 'Indie Flower', cursive;
+ color: #2e2e2e;
 
 }
 h1{
     font-family: 'Acme', sans-serif;
+    color: #2e2e2e;
+    font-size: 50px;
 }
 .bioContainer{
     display: flex;
@@ -58,24 +67,29 @@ left: 100px;
     display: flex;
     flex-direction: column;
     position: relative;
-    right: 80rem;
+    right: 60rem;
     top: 1rem;
     height: 20rem;
     width:30rem;
     font-family: 'Amatic SC', cursive;
     font-size: 36px;
+    color: #2e2e2e;
 
 }
 .pictureDescription{
     display: flex;
     flex-direction: column;
     position: relative;
-    height: 8rem;
+    height: 16rem;
     width: 20rem;
     left: 20rem;
     top: 25rem;
     font-family: 'Amatic SC', cursive;
     font-size: 29px;
+    font-weight: 100;
+    color: #2e2e2e;
+    border: double 8px #2e2e2e;
+    border-radius: 7%;
 
 }
 @media screen and (max-width: 390px) {
