--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -1,15 +1,15 @@
-.mainContainer{
+/* .mainContainer{
     display: flex;
     flex-direction: column;
     /* border: 7px groove rgb(216, 119, 8); */
-    position: inherit;
+    /* position: inherit;
     max-width: 100vw;
     max-height: 100vh;
     padding: .5rem;
     /* background-image: linear-gradient( blueviolet 2%, rgb(41, 24, 112) ); */
-    border-radius: 1%;
+    /* border-radius: 1%;
     align-items: center;
-}
+} */ 
 .myPictures {
     display: flex;
     flex-direction: row;
@@ -56,6 +56,7 @@ h1{
     font-family: 'Acme', sans-serif;
     color: #2e2e2e;
     font-size: 50px;
+    position: relative;
 }
 .bioContainer{
     display: flex;
@@ -76,7 +77,7 @@ left: 100px;
 
 }
 .pictureDescription{
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     position: relative;
     height: 16rem;
@@ -92,11 +93,30 @@ left: 100px;
 background-color: #cf9e00;
 padding: 2px;
 }
-/* @media screen and (max-width: 390px) {
-    .mainContainer {
-        width: 90%;
-        height: 90%;
+@media screen and (max-width: 390px) {
+    .additionalInfo{
+        bottom: 35rem;
+        left: 26rem;
+        font-size: 20px;
+       
+        
     }
-
+    .bioContainer{
+    width:30%;
+    left: -10rem;
 }
-     */
+h1{
+    left: 9rem;
+}
+.bioText{
+    font-size: 20px;
+    left: 13rem;
+}
+.pictureDescription{
+    left: 0rem;
+    top: -33rem;
+   font-size: 20px;
+   overflow-y: auto;
+}
+}
+    
