--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -1,27 +1,33 @@
-/* .mainContainer{
-    display: flex;
+.mainContainer{
+    /* display: flex;
     flex-direction: column;
-    /* border: 7px groove rgb(216, 119, 8); */
-    /* position: inherit;
+     border: 7px groove rgb(216, 119, 8); 
+     position: inherit;
     max-width: 100vw;
     max-height: 100vh;
     padding: .5rem;
-    /* background-image: linear-gradient( blueviolet 2%, rgb(41, 24, 112) ); */
-    /* border-radius: 1%;
-    align-items: center;
-} */ 
+     
+     border-radius: 1%;
+    align-items: center; */
+width:75%;
+display: flex;
+flex-direction: column;
+align-items: center;
+} 
+
 .myPictures {
     display: flex;
     flex-direction: row;
+
     width: 75%;
     padding: .5rem;
 }
 .myPictures img {
-    position: relative;
+   display: flex;
     width: 50rem ;
    border: double 8px rgb(48, 46, 46);
     border-radius: 7%;
-    left: 400px;
+   
 }
 .bioText{
     font-family: 'Amatic SC', cursive;
@@ -35,7 +41,7 @@
 
 }
 .pictureBtn {
- position: relative;
+
  display: flex;
  top: 30rem;
  left: 27rem;
@@ -56,8 +62,9 @@ h1{
     font-family: 'Acme', sans-serif;
     color: #2e2e2e;
     font-size: 50px;
-    position: relative;
-    left: 70rem
+   text-align: center;
+   
+    width: 75%;
 }
 .bioContainer{
     display: flex;
@@ -78,13 +85,13 @@ left: 100px;
 
 }
 .pictureDescription{
-    /* display: flex; */
-    flex-direction: column;
-    position: relative;
-    height: 16rem;
-    width: 20rem;
-    left: 20rem;
-    top: 6rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    
+    height: 18%;
+    width: 30%;
+    
     font-family: 'Amatic SC', cursive;
     font-size: 29px;
     font-weight: 100;
@@ -94,7 +101,7 @@ left: 100px;
 background-color: #cf9e00;
 padding: 2px;
 }
-@media screen and (max-width: 390px) {
+/* @media screen and (max-width: 390px) {
     .additionalInfo{
         bottom: 44rem;
         left: 42rem;
@@ -130,5 +137,5 @@ h1{
     left: 20rem;
 
 }
-}
+} */
     
