--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -14,7 +14,12 @@ display: flex;
 flex-direction: column;
 align-items: center;
 } 
-
+.picCarousel{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    
+}
 .myPictures {
     display: flex;
     flex-direction: row;
@@ -87,11 +92,11 @@ left: 100px;
 .pictureDescription{
     display: flex;
     flex-direction: row;
-    align-items: center;
+    margin: 2%;
     
-    height: 18%;
+    height: 40%;
     width: 30%;
-    
+    justify-content: flex-end ;
     font-family: 'Amatic SC', cursive;
     font-size: 29px;
     font-weight: 100;
