--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -18,6 +18,8 @@ align-items: center;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
     
 }
 .myPictures {
