Styling Contact page

--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -42,7 +42,7 @@ align-items: center;
     font-weight: bolder;
     display: flex;
     width: 60%;
-    color: #2e2e2e;
+    color: #4e0404;
    position: relative;
    /* left: 30rem; */
 
