small changes to color

--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -62,7 +62,7 @@ align-items: center;
 font-weight: bolder;
  border-radius: 8%;
  font-family: 'Indie Flower', cursive;
- color: #2e2e2e;
+ color: #4e0404;
 
 }
 h1{
