--- a/brokenmetaljewelry/src/components/bio/Bio.css
+++ b/brokenmetaljewelry/src/components/bio/Bio.css
@@ -1,3 +1,6 @@
+
+@import "../utils/colors.css" ;
+
 .mainContainer{
     /* display: flex;
     flex-direction: column;
@@ -42,7 +45,7 @@ align-items: center;
     font-weight: bolder;
     display: flex;
     width: 60%;
-    color: #4e0404;
+    color: var(--burgandy);
    position: relative;
    /* left: 30rem; */
 
@@ -52,7 +55,7 @@ align-items: center;
  display: flex;
  top: 30rem;
  left: 27rem;
- border: 3px outset #4e0404;
+ border: 3px outset var(--burgandy);
  background-color: 	#c79f23;
  height: fit-content;
  width: auto;
@@ -62,12 +65,12 @@ align-items: center;
 font-weight: bolder;
  border-radius: 8%;
  font-family: 'Indie Flower', cursive;
- color: #4e0404;
+ color: var(--burgandy);
 
 }
 h1{
     font-family: 'Acme', sans-serif;
-    color:#4e0404;
+    color:var(--burgandy);
     font-size: 50px;
    text-align: center;
    
@@ -86,7 +89,7 @@ align-items: center;
     font-weight: bolder;
     display: flex;
     width: 60%;
-    color: #4e0404;
+    color:var(--burgandy);
    position: relative;
    /* left: 30rem; */
    bottom: 5rem;
@@ -103,10 +106,10 @@ align-items: center;
     font-family: 'Amatic SC', cursive;
     font-size: 29px;
     font-weight: 100;
-    color: #4e0404;
-    border: double 8px #4e0404;
+    color: var(--burgandy);
+    border: double 8px var(--burgandy);
     border-radius: 7%;
-background-color: #c79f23;
+background-color:var(--yellow);
 padding: 2px;
 }
   @media screen and (max-width: 390px) {
